--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title> color </title>
 <style type="text/css">
 * { margin: 0; box-sizing: border-box; } 
 
@@ -25,7 +26,7 @@ h2 {
 header, main, footer {
     margin: 1.25rem auto;
     padding: .5rem;
-    max-width: 650px/;
+    max-width: 650px;
 }
 
 header, footer, footer a {
@@ -41,7 +42,7 @@ header img {
 }
 
 footer {
-    font: size 0.5;em;
+    font-size:1.2em;
 }
 </style>
 </head>
