--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
 <title> color </title>
-<style type="text/css">
+<style>
 * { margin: 0; box-sizing: border-box; } 
 
 body { 
