--- a/small-5.css
+++ b/small-5.css
@@ -44,10 +44,11 @@ li{
 }
 
 main img{
-   width: 800px;
-    margin:auto;
     display:block;
     position: relative;
+    margin:auto;
+    width: 2000px;
+    height: 500px;
         
 }
 
@@ -61,9 +62,11 @@ section{
 #fiveday{
   background-color:#8FBC94;
     margin-bottom: 20px;
-border: 1px solid black;
+    border: 1px solid black;
     text-align: center;
-    margin-top: 10px;
+    margin: auto;
+    width: 2000px;
+    margin-top: -400px;
     
 }
 
@@ -86,10 +89,7 @@ a:active {
     color: white;
     text-decoration: none;
 }
-body{
-    width: 800px;
-    margin:auto;
-}
+
 
 #sumone{
     background-color: #548687;
@@ -99,26 +99,49 @@ body{
     border: 1px solid #56445D;
     position: relative;
     bottom:500px;
-    left:-120px;
+    left:-720px;
+
 }
 
 main{
     background-color: #C5E99B;
     border: 1px solid #000000;
     margin:0%;
-    max-height: 1500px;
+    height: 3000px;
+}
+
+#centerr main{
+    margin:auto;
+    max-width: 500%;
 }
 
 #article1{
 background-color: #56445D;
-margin: 0%;
+margin: auto;
 border: 1px solid black;
+width: 2000px;
+margin-top: 20px;
 }
 
 #cit{
 background-color: #56445D;
-margin: 0%;
+margin: auto;
 border: 1px solid black;
+width: 2000px;
+height: 300px;
+margin-top: -400px;
+
+}
+
+#cittext{
+    font-size: 150%;
+    float: right;
+    width:500px;
+    margin: auto;
+    position: relative;
+    top: -300px;
+    left: -580px;
+
 }
 
 footer{
@@ -130,5 +153,7 @@ footer{
     border-bottom-width: 1px;
     text-align: center;
     margin-bottom: 20px;
+    margin:auto;
+    width: 2000px;
 }
 
