--- a/main123.css
+++ b/main123.css
@@ -1,49 +1,29 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-<title> color </title>
-<style>
-* { margin: 0; box-sizing: border-box; } 
-
-body { 
-    font-size: 16px; 
-    line-height: 32px;
-    font-family: Arial, Helvetica, sans-serif;
+h1, h2{
     color: red;
 }
-
-h1 {
-    font-size:1.3em;
-    color: yellow;
-}
-
-h2 {
-    font-size: 1.3em;
-    text-align: center;
-    border-bottom: 1px solid rgb(206, 157, 157);
-}
-
-header, main, footer {
-    margin: 1.25rem auto;
-    padding: .5rem;
-    max-width: 650px;
-}
-
-header, footer, footer a {
-    text-align: center;
-    background-color:  blue ;
-    color: whitesmoke;
-}
-
-header img {
-    width: 399px;
+img {
+    width: 200px;
     height: auto;
+  }
+
+nav ul li {
+    float: left;
+  list-style-type: none;
+}
+
+nav ul li a {
+    display: block;
+    padding: .5rem 1rem;
+    background-color: red; 
+}
+
+main h1 {
+    clear: both;
+}
+
+main img {
     float: right;
 }
-
 footer {
-    font-size:1.2em;
+    text-align:center;
 }
-</style>
-</head>
-</html>
