--- a/design/css/medium.css
+++ b/design/css/medium.css
@@ -19,7 +19,10 @@
 
 /*----------- MAIN --------------*/
 
-
+    main img {
+        float: right;
+       
+    }
 
 /*----------- FOOTER --------------*/
     
