--- a/lesson-9p2/css/large.css
+++ b/lesson-9p2/css/large.css
@@ -1,5 +1,12 @@
 @media only screen and (min-width: 800px) {
     
-    
+        #first{
+        padding-left: 60px;
+        display: inline-grid;
+        grid-column-gap: 20px;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto;
+        margin-top: 20px;
+    }
 
 }
