--- a/lesson-9p2/css/large.css
+++ b/lesson-9p2/css/large.css
@@ -7,6 +7,7 @@
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto;
         margin-top: 20px;
+        color: forestgreen;
     }
 
 }
